[gd_scene load_steps=6 format=3 uid="uid://diwk0tlamcmlv"]

[ext_resource type="Theme" uid="uid://b8v02hn8g813h" path="res://assets/sisyphus_theme.tres" id="1_67dcx"]
[ext_resource type="Script" uid="uid://b0tp4ixu23g0e" path="res://scripts/day_end.gd" id="1_bgweu"]

[sub_resource type="Gradient" id="Gradient_67dcx"]
offsets = PackedFloat32Array(0, 0.569767, 1)
colors = PackedColorArray(0, 0, 0, 1, 0.855215, 0.33713, 0, 1, 0, 0.170313, 0.170951, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_d6rr1"]
gradient = SubResource("Gradient_67dcx")
fill_from = Vector2(1, 0.782051)
fill_to = Vector2(1, 0.0042735)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_dx23i"]
texture = SubResource("GradientTexture2D_d6rr1")

[node name="DayEnd" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_67dcx")
script = ExtResource("1_bgweu")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxTexture_dx23i")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="ResultLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(450, 0)
layout_mode = 2
autowrap_mode = 3

[node name="Control" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2

[node name="ContinueButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
text = " Reflect "

[node name="AscendButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
tooltip_text = "Resets all meaning and non-permanent meditations"
focus_mode = 0
mouse_filter = 1
text = "Tomorrow, a taller mountain
[Ascend]"

[node name="Control2" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 3

[connection signal="pressed" from="VBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="VBoxContainer/AscendButton" to="." method="_on_ascend_button_pressed"]
